--- a/app/build.gradle
+++ b/app/build.gradle
@@ -38,7 +38,7 @@ android {
 }
 
 dependencies {
-
+    implementation 'com.karumi:dexter:6.2.3'// for peremissions
 
 
     implementation 'androidx.core:core-ktx:1.7.0'
